--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.1.3.RELEASE'
-	id 'org.jetbrains.kotlin.jvm' version '1.2.71'
-	id 'org.jetbrains.kotlin.plugin.spring' version '1.2.71'
+	id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+	id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -12,9 +12,11 @@ sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+	"https://repo.spring.io/milestone"
 }
 
 dependencies {
+	implementation 'org.springframework.fu:spring-fu-kofu:0.0.5'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
